@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 cb31d40b4bbb83c247c088ad8bef5f8e298a423a ChangeLog
+SHA1 dc0a372296bb5210a82eec19b02c3ec76b8f466d ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 b07374187f648c3c92f3a0a9f71c2293865cdb52 META.yml
-SHA1 c3528cc5d68d40b9b743da3817467214ee205d9b Makefile.PL
+SHA1 6d715413d2e0c8812135c89413b253b0f3f88f6a META.yml
+SHA1 e6a56584e6b15c0e5c28a72c2d2641cd9af278a2 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 993db8ef01775cb200058a6976f0b89d7e702739 lib/Net/FullAuto.pm
+SHA1 a24d2d3fd4cb9af0cdf5c0c5777475281712f064 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT0ZBjAAoJEBa/9Pad787ERywH/Rgr2KNrl3Mh8Dvu0IquqQuR
-TPZRvv1MUsnDvSoF3KdiZ8mOeGKcSnbtjFVmNQDjT89gL5Urbt5Te1+6fNQZEOau
-XTm+EkdOLvQ5xSIo9/ibrtNjExPwol+bouw3Ls/OIkw2g/PEn1CkYAJl5ByT92t4
-Zg0yRpJwVuGorLRthY3qo1dO4wk+O7m9F9AOrM71yaubs+1AlTyUG4FPYLidOmA0
-jMvmz1KzBY04C+xg+F3nY+jXjgycvpu4y9OMjavRddey0VTeh85CvDVR7WPXtFr+
-+mvgy6HgTi9QoACXdIlQEi1h0I6Voqr5cOpuE981zyFmVoLrv35/nf6GOFBXCWU=
-=2ktt
+iQEcBAEBAgAGBQJT0ZfJAAoJEBa/9Pad787EUeAH/34WqQyDvvdG486WOFhm0SJ8
+F+Xcosz5PfbbJhWUThma7PRwMlTZsdE+McxZbj69a02z5f8CQ/Ym1AOd0vQm9FEB
+gETwiliCab2FExEGDYUDFqTFDAifmzJViJPnAIjmmVgfsJ4p0ifftLo/xI8btJ/a
+35IpFzlQkwsvkvbbwUCReOlSlSID8K8KkTvjQEBuD4NmoFzvRt3Eji+2oal3UWt7
+NxwTEgDZ88qGqJiQo+/bUZAtf7wc8pzWBe+gHJv/znwKuOGMcfhLA+5a2aTtJRNr
+pg5qil/mJIXC3wAxhtmSaSenhQQMOeqJzteyczmeFDt8eS2ApkSKt6mffMd/GVc=
+=//oY
 -----END PGP SIGNATURE-----
